[project]
name = "merge-blocker-strawman"
version = "0.1.0"
description = ""
authors = [
    {name = "Javier Matias-Cabrera",email = "javier@javiermatias.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "merge_blocker_strawman", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
